fixed x-overflow issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -37,7 +37,6 @@ html {
 #root {
   background: $primary-bg;
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 header {
@@ -116,7 +115,7 @@ section {
 .header-main-wrapper {
   @include flex-center(column, 0.25rem);
   border-bottom: 2px #ebebeb solid;
-  width: 100vw;
+  width: 100%;
   padding-bottom: 0.75rem;
 }
 
